feat: Ghosttyのテーマをtokyonightに変更
.config/ghostty/configファイルにおいて、テーマ設定をtokyonightに追加しました。

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -123,3 +123,4 @@ keybind = cmd+comma=reload_config
 #   ghostty +list-fonts               - List all available fonts
 #   ghostty +show-config --default    - Show default configuration
 #   ghostty +list-keybinds --default  - Show default key bindings
+theme = tokyonight
