fix: Emacsキーバインド互換性のためTERM環境変数をxterm-256colorに変更
- term = xterm-256color を設定してKitty Keyboard Protocolを無効化
- Ctrl+I=Tab、Ctrl+M=Enterが正常に動作するようになる
- emacsキーバインドに慣れたユーザー向けの設定

背景:
Ghosttyはデフォルトで term=xterm-ghostty を使用し、Kitty Keyboard
Protocolが有効になる。これによりCtrl+Iは[109;5uのようなエスケープ
シーケンスとして送信され、シェルのemacsキーバインドと競合する。

参考: https://ghostty.org/docs/config/reference#term

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -54,6 +54,12 @@ window-vsync = true
 # ============================================================================
 # Reference: https://ghostty.org/docs/features/shell-integration
 
+# TERM environment variable
+# Default: xterm-ghostty (enables Kitty Keyboard Protocol)
+# Changed to xterm-256color for Emacs keybind compatibility
+# This disables Kitty Keyboard Protocol and allows Ctrl+I/M to work as Tab/Enter
+term = xterm-256color
+
 # Shell integration (auto-detect: bash, zsh, fish, elvish)
 shell-integration = detect
 
