feat: Ghosttyのフォントサイズを変更し、キーバインドを追加
- フォントサイズを13から17に変更
- テーマをtokyonightに設定
- Enter、Tab、Backspace、Escape、Line Feedのキーバインドを追加

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -20,7 +20,7 @@ theme = dark:Catppuccin Mocha,light:Catppuccin Latte
 # Includes programming ligatures for better code visualization
 
 font-family = "JetBrains Mono"
-font-size = 13
+font-size = 17
 
 # Enable font ligatures (default: true)
 # Disable with: font-feature = -calt
@@ -134,3 +134,19 @@ keybind = cmd+comma=reload_config
 #   ghostty +show-config --default    - Show default configuration
 #   ghostty +list-keybinds --default  - Show default key bindings
 theme = tokyonight
+
+# Carriage Return (Enter)
+keybind = ctrl+m=text:\x0d
+
+# Tab
+keybind = ctrl+i=text:\x09
+
+# Backspace
+keybind = ctrl+h=text:\x08
+
+# Escape
+keybind = ctrl+[=text:\x1b
+
+# Line Feed
+keybind = ctrl+j=text:\x0a
+
